--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
             </div>
 
             <h3 class="h3">
-              <a href="#" class="card-title">Cortes</a>
+              <a href="#"class="card-title">Cortes</a>
             </h3>
 
             <p class="card-text">
             </p>
 
-            <a href="#pricing" class="card-btn" aria-label="more">
+            <a href="#pricing" class="corte-btn card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
             </a>
 
@@ -262,7 +262,7 @@
             <p class="card-text">
             </p>
 
-            <a href="#pricing" class="card-btn" aria-label="more">
+            <a href="#pricing" class="barba-btn card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
             </a>
 
@@ -283,7 +283,7 @@
             <p class="card-text">
             </p>
 
-            <a href="#pricing" class="card-btn" aria-label="more">
+            <a href="#pricing" class="combo-btn card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
             </a>
 
@@ -298,14 +298,14 @@
             </div>
 
             <h3 class="h3">
-              <a href="#" class="card-title">Química</a>
+              <a href="#" class="card-title ">Química</a>
             </h3>
 
             <p class="card-text">
             </p>
 
 
-            <a href="#pricing" class="card-btn" aria-label="more">
+            <a href="#pricing" class="quimica-btn card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
             </a>
 
