--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- favicon -->
 
-  <link rel="shortcut icon" href="/assets/images/logoo.JPG" type="image/svg+xml">
+  <link rel="shortcut icon" href="/assets/images/logoHeaderEsthevan (1).png" type="image/svg+xml">
   <!-- 
     - youtube
   -->
@@ -126,7 +126,7 @@
       <div class="container logoheader">
 
         <a href="#" class="logo">
-          <img src="./assets/images/logoo.JPG">
+          <img src="./assets/images/logoHeaderEsthevan (1).png">
         </a>
 
         <nav class="navbar container" data-navbar>
@@ -893,7 +893,7 @@
             <div class="footer-brand">
 
               <a href="#" class="logo">
-                <img src="./assets/images/logoo.JPG">
+                <img src="./assets/images/logoHeaderEsthevan (1).png">
 
               </a>
 
