--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <!-- favicon -->
 
-  <link rel="shortcut icon" href="/assets/images/logoHeaderEsthevan (1).png" type="image/svg+xml">
+  <link rel="shortcut icon" href="./assets/images/logonovoEsthevan (1).png" type="image/svg+xml">
   <!-- 
     - youtube
   -->
@@ -126,7 +126,7 @@
       <div class="container logoheader">
 
         <a href="#" class="logo">
-          <img src="./assets/images/logoHeaderEsthevan (1).png">
+          <img src="./assets/images/logonovoEsthevan (1).png">
         </a>
 
         <nav class="navbar container" data-navbar>
@@ -191,19 +191,19 @@
 
       <section class="backgroundImg section hero has-before has-bg-image" id="home" aria-label="home">
 
-        <div class="container">
+        <div class="container" style="min-height: 460px;">
 
-          <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
+          <!-- <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
 
           <p class="hero-text">
             Procura uma barbearia de confiança e com ótimos profissionais? Conheça a Brond's Barbearia!
-          </p>
+          </p> -->
 
-          <a href="#services" class="btn has-before">
+          <!-- <a href="#services" class="btn has-before">
             <span class="span">Explore nossos serviços</span>
 
             <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-          </a>
+          </a> -->
 
         </div>
       </section>
@@ -217,7 +217,7 @@
         - #Serviços
       -->
 
-  <section class="section service" id="services" aria-label="services">
+  <!-- <section class="section service" id="services" aria-label="services">
     <div class="container">
 
       <h2 class="h2 color-title section-title text-center">Serviços</h2>
@@ -361,7 +361,7 @@
   </section>
 
 
-
+ -->
 
 
   <!-- 
@@ -450,7 +450,7 @@
                 <p class="card-text">30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="60">R$55</data>
+              <data class="card-price" value="60">R$70</data>
 
             </div>
           </li>
@@ -469,7 +469,7 @@
                 <p class="card-text">30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="80">R$45</data>
+              <data class="card-price" value="80">R$55</data>
 
             </div>
           </li>
@@ -488,7 +488,7 @@
                 <p class="card-text"> 30-40 minutos.</p>
               </div>
 
-              <data class="card-price" value="55">R$60</data>
+              <data class="card-price" value="55">R$80</data>
 
             </div>
           </li>
@@ -507,7 +507,7 @@
                 <p class="card-text">30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="56">R$50</data>
+              <data class="card-price" value="56">R$60</data>
 
             </div>
           </li>
@@ -526,7 +526,7 @@
                 <p class="card-text"> 1:00 hora</p>
               </div>
 
-              <data class="card-price" value="350">R$95</data>
+              <data class="card-price" value="350">R$120</data>
 
             </div>
           </li>
@@ -545,7 +545,7 @@
                 <p class="card-text"> 1:00 hora</p>
               </div>
 
-              <data class="card-price" value="75">R$80</data>
+              <data class="card-price" value="75">R$100</data>
 
             </div>
           </li>
@@ -564,7 +564,7 @@
                 <p class="card-text">1:30-2:00 horas</p>
               </div>
 
-              <data class="card-price" value="43">R$350</data>
+              <data class="card-price" value="43">R$500</data>
 
             </div>
           </li>
@@ -578,12 +578,12 @@
               </figure>
 
               <div class="wrapper">
-                <h3 class="h3 card-title colorFont">Selagem + Luzes</h3>
+                <h3 class="h3 card-title colorFont">Selagem + Corte</h3>
 
                 <p class="card-text">1:30-2:00 horas</p>
               </div>
 
-              <data class="card-price" value="105">R$150</data>
+              <data class="card-price" value="105">R$200</data>
 
             </div>
           </li>
@@ -598,7 +598,7 @@
 
   <!-- visagismo -->
 
-  <section class="section " id="visagismoDs" aria-label="photo gallery">
+  <section class="section " id="visagismoDs" aria-label="photo gallery" style="background-color: #2F313D;">
 
     <div class="title-wrapper">
       <h2 class="h2 color-title section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
@@ -606,7 +606,7 @@
     <div class="content">
       <div class="visagismo_content container">
         <div class="text-container">
-          <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+          <p class="section-text" style="color: white;">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
             revelar a essência
             única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
             personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra-o
@@ -655,11 +655,11 @@
 
 
   <!-- cursos -->
-  <div id="cursoDs" ></div>
+  <!-- <div id="cursoDs" ></div>
   <section class="cursosP " aria-label="photo gallery">
 
     <div class="headerCursos container">
-      <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
+      <img class="logoCursos" src="./assets/images/Design sem nome (2).png" alt="">
       <h1 class=" h2  color-title titleCursos"> Explore Nossos Cursos</h1>
     </div>
 
@@ -687,7 +687,7 @@
           </figure>
         </div>
 
-      </div>
+      </div> -->
       <!-- <div class="visagismo_content2">
         <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20cursos%20"
           class="btn has-before">
@@ -696,7 +696,7 @@
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
       </div> -->
-    </div>
+    <!-- </div>
   </section>
   <section class="secondCurso">
     <div class="container">
@@ -760,7 +760,7 @@
 
   </section>
 
-
+ -->
 
 
 
@@ -863,7 +863,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="/assets/images/tapete.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/tapete.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
           </div>
@@ -885,7 +885,7 @@
     - #FOOTER/rodapé
   -->
     <section class="allFooter section">
-      <footer class="footer has-bg-image" style="background-image: url('./assets/images/footer-bg.png')">
+      <footer class="footer has-bg-image" style="background-color: #2F313D;">
         <div class="container">
 
           <div class="footer-top">
@@ -893,7 +893,7 @@
             <div class="footer-brand">
 
               <a href="#" class="logo">
-                <img src="./assets/images/logoHeaderEsthevan (1).png">
+                <img src="./assets/images/logonovoEsthevan (1).png">
 
               </a>
 
