--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
               <a href="#home" class="navbar-link" data-nav-link>Início</a>
             </li>
 
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <a href="#services" class="navbar-link" data-nav-link>Serviços</a>
-            </li>
+            </li> -->
 
             <li class="navbar-item">
               <a href="#pricing" class="navbar-link" data-nav-link>Preços</a>
@@ -148,9 +148,9 @@
               <a href="#workshopDs" class="navbar-link" data-nav-link>Workshop</a>
             </li>
 
-            <li class="navbar-item">
+            <!-- <li class="navbar-item">
               <a href="#cursoDs" class="navbar-link" data-nav-link>Cursos</a>
-            </li>
+            </li> -->
 
             <li class="navbar-item">
               <a href="#gallery" class="navbar-link" data-nav-link>Galeria</a>
