--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <header class="header">
 
-    <div class="header-top">
+    <div class="header-top" style="background-color: #2F313D;">
       <div class="container">
 
         <ul class="header-top-list">
