mudanca cor header

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="container logoheader">
 
         <a href="#" class="logo">
-          <img src="./assets/images/logonovoEsthevan (1).png">
+          <img src="./assets/images/logoHeader.png">
         </a>
 
         <nav class="navbar container" data-navbar>
