--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         </p> 
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
+            <img src="./assets/images/esthevanSorrindo.jpeg" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
               class="foto_mobile">
           </figure>
         </div>
@@ -864,6 +864,26 @@
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
               <img src="./assets/images/tapete.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                class="img-cover">
+            </figure>
+          </div>
+        </li>
+        <li>
+          <div class="gallery-card">
+
+            <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
+              <img src="./assets/images/esthevanDeTerninhoSorrindo.jpeg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                class="img-cover">
+            </figure>
+          </div>
+        </li>
+
+
+        <li>
+          <div class="gallery-card">
+
+            <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
+              <img src="./assets/images/esthevanTerninhoPreto.jpeg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
           </div>
