--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="../barber/assets/images/logoo.jpg" type="image/svg+xml">
+  <link rel="shortcut icon" href="../barber/assets/images/logonovoEsthevan (1).png" type="image/svg+xml">
 
   <!-- 
     - custom css link
