mudanca ft preco esthevan

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/cortePrecoEsthevan.jpg" width="90" height="90" alt="Hair Color & Wash"
+                <img src="./assets/images/ESTHEVAN_BRONDS-57 (1).jpg" width="90" height="90" alt="Hair Color & Wash"
                   class="img-cover">
               </figure>
 
