--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/3EB5ECCC-95D0-4970-9E5F-76364151A962 (1) (2).jpg" width="90" height="90"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90"
                   alt="Hair Cutting & Fitting" class="img-cover">
               </figure>
 
@@ -459,7 +459,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (1) (1).jpg" width="90" height="90"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90"
                   alt="Shaving & Facial" class="img-cover">
               </figure>
 
@@ -478,7 +478,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/ESTHEVAN_BRONDS-57 (1).jpg" width="90" height="90" alt="Hair Color & Wash"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90" alt="Hair Color & Wash"
                   class="img-cover">
               </figure>
 
@@ -497,7 +497,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/11F2BDF3-7E20-446F-9945-7C9F380990A0 (1).jpg" width="90" height="90"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90"
                   alt="Body Massage" class="img-cover">
               </figure>
 
@@ -516,7 +516,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/ESTHEVAN_BRONDS-57 (1).jpg" width="90" height="90" alt="Beauty & Spa"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90" alt="Beauty & Spa"
                   class="img-cover">
               </figure>
 
@@ -535,7 +535,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/11F2BDF3-7E20-446F-9945-7C9F380990A0 (1).jpg" width="90" height="90"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90"
                   alt="Facial & Face Wash" class="img-cover">
               </figure>
 
@@ -554,7 +554,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90" alt="Backbone Massage"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90" alt="Backbone Massage"
                   class="img-cover">
               </figure>
 
@@ -573,7 +573,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/quimica.jpg" width="90" height="90" alt="Meditation & Massage"
+                <img src="./assets/images/newHeaderLogo.png" width="90" height="90" alt="Meditation & Massage"
                   class="img-cover">
               </figure>
 
